方法区的内部结构